# stt-toolkit

./: .gitignore  .start-vllm.sh  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
configs/: Voxtral-Mini-3B-2507.yaml  qwen3-asr.yaml  whisper-large-v3-turbo.yaml
data/network_1976/: mad_as_hell.txt
docker/moshi-rust/: Dockerfile  docker-compose.yml
docker/vllm-openai-audio/: Dockerfile
scripts/: batched_transcription_vllm_bench.py  start-vllm.sh  start_vllm.py  stop_vllm.py  stt-vllm-bench.py  stt-vllm.py  stt_vllm.py  utils.py  wer-vllm-bench.py  wer_vllm_bench.py
streamlits/: wer_viewer.py
